# GeneticImgProc

./: CMakeLists.txt  README.md  main.cpp
app/: app_context.cpp  app_context.hpp  candidate_solution.cpp  candidate_solution.hpp  scoring_process.cpp  scoring_process.hpp  state_rendering.cpp  state_rendering.hpp
demo/: flower_output.json  goat_output.json
genetic_routine/: genetic_individual.cpp  genetic_individual.hpp  genetic_population.hpp  randomizer.cpp  randomizer.hpp
texture_operations/: texture_batching.cpp  texture_batching.hpp  texture_conversion.cpp  texture_mixing.cpp  texture_mixing.hpp  texture_reduction.cpp  texture_reduction.hpp  texture_tiles_job.cpp  texture_tiles_job.hpp
